--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2502,5 +2502,17 @@ footer.site-footer {
   #cellPaiChart #pieLabel0 {
     left: inherit !important;
     right: 20px !important; }
-
+    .preloader {
+      width: 100%;
+      height: 100%;
+      top: 0;
+      position: fixed;
+      z-index: 99999;
+      background: #fff;
+    }
+    .preloader .cssload-speeding-wheel {
+      position: absolute;
+      top: calc(46.5%);
+      left: calc(46.5%);
+    }
 /*# sourceMappingURL=style.css.map */
